[package]
name = "komlesukker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = "0.4"
clap = { version = "4.5.45", features = ["derive"] }
webbrowser = "1.0.5"
